@@ -23,6 +23,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.25  2004/11/26 13:26:44  jimmyo
+# Added --stdout-option to all programs.
+#
 # Revision 1.24  2004/11/21 14:39:23  jimmyo
 # Renamed function munin_get_val to munin_get.
 #
@@ -978,6 +981,7 @@ sub logger {
   my ($comment) = @_;
   my $now = strftime "%b %d %H:%M:%S", localtime;
 
+  print "$now - $comment\n" if $print_stdout;
   if ($log->opened)
   {
 	  print $log "$now - $comment\n";
