@@ -4,6 +4,7 @@ munin (work)
   * Bugfix in munin-html, when using groups/host names with more than one dot.
   * Updated RPM package creation with regards to the 1.2 series.
   * Created RPM package creation for SuSE with regards to the 1.2 series.
+  * Added --stdout-option to all programs.
 
 munin (1.1.6)
 
